# programming-language-table

./: .gitignore  README.md  flake.nix  hello.py  index.html  make.pl  pyproject.toml
OLD_markdown_lang_view/: c.md  python-OLD.md
_scratch/: hyperpolyglot.css
_scratch/markdown-source/langs/: go.md
_scratch/scratch/: chatgpt.txt  notes.md
_scratch/scratch/selection_menu/: selection (good).html  selection.css  selection.html
_scratch/table_selection/: index.html  language-classes.json  main.js  notes.md  style.css
guides/: nix.md  python_and_poetry.md
html/: test.html
markdown-source/langs/: go.md
markdown_feat_view/000__basics/000__console_output/: 000__hello_world.md  name.txt
markdown_feat_view/000__basics/001__primitive_types/: 000__boolean.md  001__integer.md
markdown_feat_view/0__basics/0_0__console_output/: 0_0_0__hello_world.md
markdown_feat_view/0__basics/0_1__primitive_types/: name.txt
markdown_lang_view/: haskell.md  python.md  rust.md
metadata/: language-classes.json  timestamp.json
modules/: sync.pm
nix/: uv.nix
scratch/column_selection/: column_hiding.html
scratch/hiding/: hiding.html  hiding2.html
scratch/selection_menu/: selection (gen1).html  selection.html
src/plt_generator/: __main__.py  cli.py  master_table.py
src/plt_generator/__parsing/: parser.py  tokenizer.py
src/plt_generator/data/: __init__.py  constants.py  datamodels.py  featview.py  illustration.py  langview.py  master_table.py  md_parsing.py  (+2 more)
static_inputs/: html_template.txt  script.js
static_inputs/txt/: intro.txt
viz/: pydeps.txt  run.sh
(+22 files in other folders)
