[tool.poetry]
name = "plt-generator"
version = "0.1.0"
description = "Python package to generate static html from markdown files for the Programming Language Table website."
authors = ["yelircaasi <isaac.r.riley@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pygments = "2.17.2"
markdown-to-json = "2.1.0"
types-pygments = "^2.17.0.0"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
isort = "5.12.0"
black = "23.11.0"
pydeps = "1.12.17"
mypy = "1.7.1"
ruff = "0.1.6"
pylint = "3.0.2"

[tool.poetry.scripts]
pltgen = "plt_generator.__main__:main"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
